--- a/back-end/build.gradle
+++ b/back-end/build.gradle
@@ -26,6 +26,9 @@ dependencies {
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//	implementation 'org.springframework.security:spring-security-oauth2-authorization-server:0.3.1'
+//	implementation 'org.springframework.boot:spring-boot-starter-security'
+
 }
 
 tasks.named('test') {
