--- a/front-end-ts/package.json
+++ b/front-end-ts/package.json
@@ -13,12 +13,16 @@
     "@chakra-ui/react": "^2.3.7",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.12",
     "axios": "^1.1.3",
+    "formik": "^2.2.9",
     "framer-motion": "^7.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
-    "react-router-dom": "^6.4.3"
+    "react-router-dom": "^6.4.3",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
